# NeutralAlpha-Vault

./: .env.example  .gitignore  LICENSE  NeutralAlpha_Vault_PRD.docx  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
api/_utils/: common.js
api/v1/: contracts.js  dashboard.js  health.js
api/v1/ai/: signal.js
api/v1/risk/: simulate.js
api/v1/vault/: activity.js  deposit.js  (+1 more)
docs/: API_CONTRACT.md  BACKTEST_APY_REPORT.md  COMPLIANCE_NARRATIVE.md  DEMO_VIDEO_SCRIPT_FINAL.md  FINAL_SMOKE_TEST_REPORT_2026-03-25.md  FULL_PROJECT_AUDIT.md  ONCHAIN_RUNBOOK.md  RANGER_SUBMISSION_PACKAGE.md  RUNBOOK.md  STATUS_2026-03-22.md  STRATEGY_FINAL.md  TESTNET_HARNESS.md  TODO_ACTION_PLAN.md
lib/: aiSignalEngine.mjs  apiSecurity.mjs  telemetryState.mjs
onchain/: .env.example  Anchor.toml  README.md
onchain/programs/neutralalpha_vault/: Cargo.toml
onchain/programs/neutralalpha_vault/src/: lib.rs
scripts/: dev-stack.mjs  smoke-e2e.mjs  testnet-harness.mjs  vault-client.mjs
scripts/lib/: splTokenLite.mjs
server/: index.mjs
src/: App.tsx  index.css  main.tsx
src/components/: AppErrorBoundary.tsx  Architecture.tsx  Dashboard.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Performance.tsx  RiskManagement.tsx  Strategy.tsx  WalletModal.tsx
src/config/: network.ts
src/context/: WalletContext.tsx
src/idl/: neutralalpha_vault.json
src/pages/: DashboardPage.tsx  LandingPage.tsx
src/services/: aiSignalApi.ts  dashboardApi.ts  dashboardFallback.ts  driftDataApi.ts  splTokenLite.ts  vaultProgram.ts
src/types/: dashboard.ts  phantom.d.ts
